@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1044 2009-07-18 01:48:32 castaglia Exp $
+$Id: NEWS,v 1.1045 2009-07-20 00:18:47 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -16,6 +16,7 @@ CVS
 - Bug 3265 - SFTP requests are logged to ExtendedLog without regard to classes.
 - Bug 2758 - ProFTPD doesn't always pay attention to AccessDenyMsg.
 - Bug 3266 - Support "implicit" FTPS.
+- Bug 2070 - AuthAliasOnly off in <Global> section kills anonymous logins.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
